<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>
    <string name="barcode_activity_name" translatable="false">Alexandria Barcode Reader</string>

    <!-- Menu Items -->
    <string name="books" translatable="true">List of Books</string>
    <string name="scan" translatable="true">Scan/Add a Book</string>
    <string name="about" translatable="true">About this App</string>

    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="scan_button" translatable="true">Scan</string>
    <string name="input_hint" translatable="true">Insert ISBN-13. Digits only.</string>
    <string name="book_cover" translatable="true">Bookcover</string>

    <string name="ok_button" translatable="true">Next</string>
    <string name="cancel_button" translatable="true">Cancel</string>
    <string name="not_found" translatable="true">No Book found</string>
    <string name="search" translatable="true">Search</string>
    <string name="delete" translatable="true">Delete Book</string>
    <string name="pref_startScreen" translatable="true">Select Startscreen</string>
    <string name="title_activity_settings" translatable="true">Settings</string>
    <string name="action_share" translatable="true">Share</string>
    <string name="back_button" translatable="true">go back</string>
    <string name="share_text" translatable="true">A must read book: </string>

    <!--Barcode scanner strings-->
    <string name="ok" translatable="true">OK</string>
    <string name="permission_camera_rationale" translatable="true">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="true">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="true">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!--The text displayed in the about fragment -->
    <string name="about_text" translatable="true">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>

    <!--Strings used for the settings and display of camera specific settings-->
    <string name="auto_flash_setting" translatable="false">auto_flash</string>
    <string name="auto_flash_title" translatable="true">Auto Flash</string>
    <string name="auto_focus_setting" translatable="false">auto_focus</string>
    <string name="auto_focus_title" translatable="true">Auto Focus</string>

    <!--Strings to be used for processing JSON data-->
    <string name="ITEMS_JSON" translatable="false">items</string>
    <string name="VOLUME_INFO_JSON" translatable="false">volumeInfo</string>
    <string name="TITLE_JSON" translatable="false">title</string>
    <string name="SUBTITLE_JSON" translatable="false">subtitle</string>
    <string name="AUTHORS_JSON" translatable="false">authors</string>
    <string name="DESC_JSON" translatable="false">description</string>
    <string name="CATEGORIES_JSON" translatable="false">categories</string>
    <string name="IMG_URL_PATH_JSON" translatable="false">imageLinks</string>
    <string name="IMG_URL_JSON" translatable="false">thumbnail</string>

    <!--Default starting ISBN number-->
    <string name="STARTING_ISBN" translatable="false">978</string>

    <!--MIME type to translate the data as-->
    <string name="MIME_TYPE" translatable="false">text/plain</string>

    <!--Fragment transaction name for moving to details about a book-->
    <string name="BOOK_DETAIL_TRANSACTION" translatable="false">Book Detail</string>

    <!--Action string to be used for putting up messages to the user (i.e. errors or such)-->
    <string name="MESSAGE_EVENT" translatable="false">MESSAGE_EVENT</string>

    <!--A key lookup name to use when finding messages to display to the user.-->
    <string name="MESSAGE_KEY" translatable="false">MESSAGE_KEY</string>

    <!--Preference for the current selected position-->
    <string name="Preference_StartFragment">pref_startFragment</string>

</resources>
