<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:tag="PREFERENCE_TAG"
    >

    <ListPreference
        android:key="@string/Preference_StartFragment"
        android:title="@string/pref_startScreen"
        android:entries="@array/pref_start_options"
        android:entryValues="@array/pref_start_values" />

    <CheckBoxPreference
        android:key="@string/auto_flash_setting"
        android:defaultValue="false"
        android:title="@string/auto_flash_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="@string/auto_focus_setting"
        android:defaultValue="true"
        android:title="@string/auto_focus_title">
    </CheckBoxPreference>

</PreferenceScreen>